Pokemon paged list logic; Paging3 remote mediator with remote keys and RecyclerView adapter; List items including loading and error; Pokemon webservice unit tests; Framework dependencies;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Pokemon Showcase</string>
+
+    <string name="error_unknown">Unknown error</string>
+    <string name="error_loading_data">Error loading data</string>
+    <string name="label_try_again">Try again</string>
 </resources>
