--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="label_favorite_pokemon">Favorite Pokemon</string>
     <string name="label_search">Search</string>
     <string name="empty_favorite_list">No favorites added yet</string>
+    <string name="title_favorites">Favorites</string>
 </resources>
